--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <header class="inner">
           <!--<a id="forkme_banner" href="https://github.com/georgewhelan">View on GitHub</a>-->
 
-          <h1 id="project_title">Georgewhelan.github.io</h1>
+          <h1 id="project_title">George Whelan</h1>
+          <h2>Developer for hire</h2>
           
         </header>
     </div>
